# c2fj

./: .gitignore  .gitmodules  LICENSE  README.md  install_riscv_gcc_ubuntu.sh  pyproject.toml
.github/workflows/: poetry-publish.yml  tests.yml
c2fj/: c2fj_main.py  riscv_instructions.py  riscv_to_fj.py
c2fj/compilation_files/: Makefile_single_c_generic  c2fj_init.c  linker_script.ld  riscvlib.fj
c2fj/compilation_files/include/: c2fj_syscall.h
src/: Makefile  Makefile.c2fj_vars  __init.S  __init.c  arm_to_fj.py  armv7lib.fj  c2fj.py  c2fj_init.c  c2fj_syscall.h  c_to_fj.py  debug_c2fj.h  linker_script.ld  main.c  riscv_instructions.py  riscv_to_fj.py  riscvlib.fj  test
tests/: conftest.py  test_c2fj.py
tests/programs/hello_float/: main.c  output.txt
tests/programs/hello_input/: main.c  output.txt
tests/programs/hello_input_number/: main.c  output.txt
tests/programs/hello_math/: main.c  output.txt
tests/programs/hello_world/: output.txt
tests/programs/main/: Makefile  main.c  output.txt
tests/programs/multiple_files/: Makefile  calculate_int.c  calculate_int.h  globals.c  main.c  output.txt
tests/programs/primes/: main.c  output.txt
tests/programs/print_alice/: main.c  output.txt
tests/programs/riscv_ops__all_c_syscalls/: input.txt  main.c  output.txt
tests/programs/riscv_ops__alu/: main.c  output.txt
tests/programs/riscv_ops__alu_imm/: Makefile  main.c  output.txt
tests/programs/riscv_ops__jumps/: Makefile  main.c  output.txt
tests/programs/riscv_ops__memory/: main.c  output.txt
tests/programs/riscv_ops__rv32m/: main.c  output.txt
(+2 files in other folders)
