[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "c2fj"
version = "1.0.0"
description = "A C to flipjump compiler"
authors = ["Tom Herman <flipjumpproject@gmail.com>"]
license = "BSD-2-Clause-Simplified"
readme = "README.md"

homepage = "https://esolangs.org/wiki/FlipJump"
repository = "https://github.com/tomhea/c2fj"

keywords = ["esolang", "oisc", "assembly", "compiler"]
classifiers = [
    "Topic :: Education",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Other",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]


[tool.poetry.dependencies]
python = "^3.8.1"
flipjump = ">=1.3.0"

# developement
pytest = { version = "^7.4.0", optional = true }

[tool.poetry.extras]
tests = ["pytest"]

[tool.poetry.scripts]
c2fj = 'c2fj.c2fj_main:main'
